[gd_scene load_steps=14 format=3 uid="uid://bmkt6lcuptbnf"]

[ext_resource type="LabelSettings" uid="uid://csrb5ilr7y6dy" path="res://resources/main_menu_title_label_setting.tres" id="1_c4tx6"]
[ext_resource type="Script" path="res://scripts/credits.gd" id="1_o3suw"]
[ext_resource type="FontFile" uid="uid://btvwq11pvkgw7" path="res://assets/fonts/minimal5x7.ttf" id="2_5ad5r"]
[ext_resource type="PackedScene" uid="uid://cues4uwwmc7sa" path="res://scene_objects/menu_background.tscn" id="2_pa7y0"]
[ext_resource type="StyleBox" uid="uid://67m76h2nyeyy" path="res://resources/main_menu_button_style.tres" id="4_3veic"]
[ext_resource type="FontFile" uid="uid://dx5eri8m2oqq8" path="res://assets/fonts/Catamaran-VariableFont_wght.ttf" id="4_o4jsb"]
[ext_resource type="StyleBox" uid="uid://cscwrtv4vl12l" path="res://resources/main_menu_button_hover_style.tres" id="5_7nd3c"]
[ext_resource type="StyleBox" uid="uid://dtfd366g1j00" path="res://resources/main_menu_button_pressed_style.tres" id="6_3f04u"]
[ext_resource type="Texture2D" uid="uid://l8bjysq5lio1" path="res://assets/sprites/huella_gato.png" id="9_ab8vv"]
[ext_resource type="Texture2D" uid="uid://djgrwok8arr3m" path="res://assets/sprites/Anemone_Games-1.webp" id="12_r22uy"]
[ext_resource type="PackedScene" uid="uid://d1oyxvj1u5wof" path="res://scene_objects/blip.tscn" id="13_4wf1y"]
[ext_resource type="PackedScene" uid="uid://dkl8574i60c3v" path="res://scene_objects/menu_button.tscn" id="13_25eo3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hugtt"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.384314, 0.486275, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="credits" type="Node2D"]
script = ExtResource("1_o3suw")

[node name="background" parent="." instance=ExtResource("2_pa7y0")]

[node name="menuContainer" type="VBoxContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="topMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="title" type="Label" parent="menuContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Credits"
label_settings = ExtResource("1_c4tx6")
horizontal_alignment = 1

[node name="topMargin2" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="optionsContainer" type="HBoxContainer" parent="menuContainer"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="leftMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="creditsContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="creditsText" type="RichTextLabel" parent="menuContainer/optionsContainer/creditsContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0.0901961, 1)
theme_override_constants/line_separation = 25
theme_override_fonts/normal_font = ExtResource("4_o4jsb")
theme_override_fonts/bold_font = ExtResource("4_o4jsb")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 70
bbcode_enabled = true
text = "[center][b]Eoloh[/b] (programación)
[b]montes8ish[/b] (diseño gráfico)
[b]Mooge[/b] (música y sonido)
[b]jynus[/b] (programación)

[b]Duelo de miauradas by Anemone Games[/b]
 * Hecho con Godot 4 en 72 horas para la Mermelada Jam *
[/center]"

[node name="rightMargin2" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="socialButtonContainer" type="VBoxContainer" parent="menuContainer/optionsContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="twitterButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Twitter de Eoloh"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("9_ab8vv")
icon_alignment = 1

[node name="twitterButton2" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Instagram de montes8ish"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("9_ab8vv")
icon_alignment = 1

[node name="itchioButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "SoundCloud de Moogge"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("9_ab8vv")
icon_alignment = 1

[node name="webButton" type="Button" parent="menuContainer/optionsContainer/socialButtonContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Itch.io de jynus"
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../CreditsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5ad5r")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_3veic")
theme_override_styles/hover = ExtResource("5_7nd3c")
theme_override_styles/pressed = ExtResource("6_3f04u")
theme_override_styles/disabled = ExtResource("4_3veic")
theme_override_styles/focus = SubResource("StyleBoxFlat_hugtt")
icon = ExtResource("9_ab8vv")
icon_alignment = 1

[node name="rightMargin" type="MarginContainer" parent="menuContainer/optionsContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="doneButton" parent="menuContainer" instance=ExtResource("13_25eo3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o4jsb")
theme_override_font_sizes/font_size = 45

[node name="bottomMargin" type="MarginContainer" parent="menuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="blip" parent="." instance=ExtResource("13_4wf1y")]

[node name="AnemoneGames-1" type="Sprite2D" parent="."]
position = Vector2(303, 181)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_r22uy")

[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/twitterButton" to="." method="_on_twitter_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/twitterButton2" to="." method="_on_twitter_button_2_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/itchioButton" to="." method="_on_itchio_button_pressed"]
[connection signal="pressed" from="menuContainer/optionsContainer/socialButtonContainer/webButton" to="." method="_on_web_button_pressed"]
[connection signal="pressed" from="menuContainer/doneButton" to="." method="_on_done_button_pressed"]
